Changes to LiveData.js
* Made so that you select a room to get live data from, and not a single sensor
* Updated the openAPI as well
